--- a/behat.yml
+++ b/behat.yml
@@ -2,4 +2,4 @@
 default:
     context:
         parameters:
-            base_url: http://localhost/api/
+            base_url: http://localhost/api-test/index.php/
